# image_processor

./: .gitignore  Cargo.toml  README.md
edge_detector/: Cargo.toml
edge_detector/src/: crop.rs  edge.rs  lib.rs
editor_utils/: Cargo.toml
editor_utils/src/: gif.rs  image_io.rs  lib.rs  transparency.rs  upscale.rs
interpolate/: Cargo.toml
interpolate/src/: dainargs.rs  lib.rs
processor/: Cargo.toml
processor/src/: main.rs  transparency.rs  upscale.rs  utils.rs
upscale/: Cargo.toml
