[package]
name = "edge_detector"
version = "0.1.0"
authors = ["ifletsomeclaire <69061963+ifletsomeclaire@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
editor_utils = { path = "../editor_utils" }
edge-detection = "0.2.5"
image = "0.23"
raster = "*"
rayon = "1.4.1"
